2004-04-28  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention GDB 6.1.1.  Mention gdb/gdbserver/configure
	execute permission changed.  PR server/519.

2004-04-03  GDB Administrator  <gdbadmin@sourceware.org>

	GDB 6.1 released.
	* version.in: Bump to version 6.1.

2004-04-03  Andrew Cagney  <cagney@redhat.com>

	* PROBLEMS: Mention that GDB doesn't build on HP/UX 11.00.

2004-04-02  Joel Brobecker  <brobecker@gnat.com>

	Committed by Andrew Cagney <cagney@redhat.com>
        * alpha-tdep.c (alpha_heuristic_frame_unwind_cache): Do not take
        into account an instruction saving a register if we have already
        seen an earlier instruction saving that same register.

2004-04-31  J. Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (hppa32_push_dummy_call): Set the Stack Pointer.
	(hppa64_push_dummy_call): Likewise.

2004-03-29  Daniel Jacobowitz  <drow@mvista.com>

	* mips-tdep.c (mips_pdr_data): New.
	(non_heuristic_proc_desc): Use objfile_data and set_objfile_data.
	(_initialize_mips_tdep): Initialize mips_pdr_data.

2004-03-29  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 6.0.91.

2004-03-28  Andrew Cagney  <cagney@redhat.com>

	* PROBLEMS (Stack backtraces): Rewrite.  Remove reference to
	arm*-*-*.

2004-03-28  Stephane Carrez  <stcarrez@nerim.fr>

	* tui/tui-regs.c (tui_show_registers): Make sure the TUI is active
	and switch the layout to force a display of register window.

2004-03-26  David Carlton  <carlton@kealia.com>

	* PROBLEMS: Refer to gdb/1588 instead of gdb/826.

2004-03-25  Andrew Cagney  <cagney@redhat.com>

	* PROBLEMS: Add general section titles, remove references to
	specific releases.

2004-03-25  Daniel Jacobowitz  <drow@mvista.com>

	* arm-linux-tdep.c (ARM_LINUX_JB_ELEMENT_SIZE): Define to
	INT_REGISTER_SIZE.
	(arm_linux_push_arguments): Use TARGET_DOUBLE_BIT instead of
	FP_REGISTER_VIRTUAL_SIZE.
	* arm-tdep.c (arm_make_sigtramp_cache): Use register_size instead
	of DEPRECATED_REGISTER_RAW_SIZE.