@@ -165,3 +165,9 @@
 
 /* nativefile */
 #undef GDB_NM_FILE
+
+/* Define to 1 so <sys/proc.h> gets a definition of anon_hdl.  Works
+   around a <sys/proc.h> problem on IRIX 5.  */
+#ifndef _KMEMUSER
+#undef _KMEMUSER
+#endif
