@@ -173,6 +173,12 @@
 /* nativefile */
 #undef GDB_NM_FILE
 
+/* Define to 1 so <sys/proc.h> gets a definition of anon_hdl.  Works
+   around a <sys/proc.h> problem on IRIX 5.  */
+#ifndef _KMEMUSER
+#undef _KMEMUSER
+#endif
+
 /* Define if you have the __argz_count function.  */
 #undef HAVE___ARGZ_COUNT
 
